// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The quick auth screen renders the connection using the connection domain when preferConnectionDisplayName is true, but no display name available 1`] = `
<div
  className="auth0-lock-last-login-pane"
>
  <a
    className="auth0-lock-social-button auth0-lock-social-big-button"
    data-provider="auth0"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <div
      className="auth0-lock-social-button-icon"
      style={Object {}}
    />
    <div
      className="auth0-lock-social-button-text"
      style={Object {}}
    >
      loginAtLabel,test.com
    </div>
  </a>
  <div
    className="auth0-loading-container"
  >
    <div
      className="auth0-loading"
    />
  </div>
</div>
`;

exports[`The quick auth screen renders the connection using the connection name when there is no domain available 1`] = `
<div
  className="auth0-lock-last-login-pane"
>
  <a
    className="auth0-lock-social-button auth0-lock-social-big-button"
    data-provider="auth0"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <div
      className="auth0-lock-social-button-icon"
      style={Object {}}
    />
    <div
      className="auth0-lock-social-button-text"
      style={Object {}}
    >
      loginAtLabel,Test
    </div>
  </a>
  <div
    className="auth0-loading-container"
  >
    <div
      className="auth0-loading"
    />
  </div>
</div>
`;

exports[`The quick auth screen renders the connection using the display name when preferConnectionDisplayName is true 1`] = `
<div
  className="auth0-lock-last-login-pane"
>
  <a
    className="auth0-lock-social-button auth0-lock-social-big-button"
    data-provider="auth0"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <div
      className="auth0-lock-social-button-icon"
      style={Object {}}
    />
    <div
      className="auth0-lock-social-button-text"
      style={Object {}}
    >
      loginAtLabel,My Connection
    </div>
  </a>
  <div
    className="auth0-loading-container"
  >
    <div
      className="auth0-loading"
    />
  </div>
</div>
`;

exports[`The quick auth screen renders the connection using the domain 1`] = `
<div
  className="auth0-lock-last-login-pane"
>
  <a
    className="auth0-lock-social-button auth0-lock-social-big-button"
    data-provider="auth0"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <div
      className="auth0-lock-social-button-icon"
      style={Object {}}
    />
    <div
      className="auth0-lock-social-button-text"
      style={Object {}}
    >
      loginAtLabel,test.com
    </div>
  </a>
  <div
    className="auth0-loading-container"
  >
    <div
      className="auth0-loading"
    />
  </div>
</div>
`;
